# TRG-planner

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  package.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: pre-commit.yaml  pypi.yml
config/: README.md  indoor.yaml  mountain.yaml
configs/map/: mountain.yaml  mountain_backup.yaml
configs/ros1/: ros1_params.yaml
configs/ros2/: ros2_params.yaml
cpp/: CMakeLists.txt
cpp/examples/: CMakeLists.txt  README.md  build_example.sh  run_trg_planner.cc
cpp/examples/src/: run_trg_planner.cc
cpp/include/graph/: trg.h
cpp/include/kdtree/: kdtree.h
cpp/include/planner/: trg_planner.h
cpp/include/utils/: common.h
cpp/interface/: CMakeLists.txt
cpp/interface/src/: interface.cpp
cpp/src/graph/: trg.cpp
cpp/src/kdtree/: kdtree.c
cpp/src/planner/: trg_planner.cpp
cpp/trg_planner/: CMakeLists.txt  README.md
cpp/trg_planner/cmake/: CompilerOptions.cmake  trg_plannerConfig.cmake
cpp/trg_planner/core/trg_planner/include/graph/: trg.h
cpp/trg_planner/core/trg_planner/include/interface/: interface.h  operation.h
cpp/trg_planner/core/trg_planner/include/planner/: trg_planner.h
cpp/trg_planner/core/trg_planner/include/utils/: common.h
cpp/trg_planner/core/trg_planner/src/graph/: trg.cpp
cpp/trg_planner/core/trg_planner/src/interface/: interface.cpp
cpp/trg_planner/core/trg_planner/src/kdtree/: kdtree.c
cpp/trg_planner/core/trg_planner/src/planner/: trg_planner.cpp
docker/: build.sh  compose_up.sh
docker/ros1/noetic/: Dockerfile  docker-compose.yml
docker/ros2/humble/: Dockerfile  docker-compose.yml  entrypoint.sh
examples/ros1/: fake_pose_pub.py
pipelines/: CMakeLists.txt  LICENSE  README.md  package.xml
pipelines/cpp/: CMakeLists.txt  main.cpp
pipelines/ros1/: CMakeLists.txt  package.xml
pipelines/ros1/config/: ros1_params.yaml
pipelines/ros1/include/: ros1_node.h  ros1_utils.hpp
pipelines/ros1/launch/: trg_planner_wMap.launch
pipelines/ros1/rviz/: indoor.rviz  mountain.rviz
pipelines/ros1/scripts/: fake_pose_pub.py
pipelines/ros1/src/: main.cpp  ros1_node.cpp
pipelines/ros2/: CMakeLists.txt  package.xml
pipelines/ros2/config/: ros2_params.yaml
pipelines/ros2/include/: ros2_node.h  ros2_utils.hpp
pipelines/ros2/launch/: trg_planner_wMap.py
pipelines/ros2/rviz/: indoor.rviz  mountain.rviz
pipelines/ros2/scripts/: fake_pose_pub.py
pipelines/ros2/src/: main.cpp  ros2_node.cpp
python/: CMakeLists.txt  README.md  pyproject.toml
python/examples/: run_trg_planner.py
python/trg_planner/pybind/: trg_planner_pybind.cpp
shellscripts/: download_maps.sh  uninstall.sh
