<?xml version="1.0"?>
<package format="3">
  <name>trg_planner_ros</name>
  <version>1.0.0</version>
  <description>TRG-planner ROS2 package</description>

  <!-- Author and maintainers -->
  <author email="dklee@kaist.ac.kr">Dongkyu Lee</author>
  <maintainer email="dklee@kaist.ac.kr">Dongkyu Lee</maintainer>

  <!-- License -->
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
